--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,7 @@ dj3-cloudinary-storage==0.0.6
 Django==3.2
 django-allauth==0.47.0
 django-crispy-forms==1.14.0
+django-heroku==0.3.1
 django-phonenumber-field==6.0.0
 gunicorn==20.1.0
 oauthlib==3.2.0
@@ -15,3 +16,4 @@ python3-openid==3.2.0
 pytz==2021.3
 requests-oauthlib==1.3.1
 sqlparse==0.4.2
+whitenoise==5.3.0
