--- a/requirements.txt
+++ b/requirements.txt
@@ -1,18 +1,22 @@
 asgiref==3.4.1
-cloudinary==1.28.1
+boto3==1.23.1
+botocore==1.26.1
 dj-database-url==0.5.0
-dj3-cloudinary-storage==0.0.6
 Django==3.2
 django-allauth==0.47.0
 django-crispy-forms==1.14.0
 django-phonenumber-field==6.0.0
+django-storages==1.12.3
 gunicorn==20.1.0
+jmespath==1.0.0
 oauthlib==3.2.0
 phonenumberslite==8.12.41
 psycopg2==2.9.3
+psycopg2-binary==2.9.3
 PyJWT==2.3.0
 python3-openid==3.2.0
 pytz==2021.3
 requests-oauthlib==1.3.1
+s3transfer==0.5.2
 sqlparse==0.4.2
 whitenoise==5.3.0
